--- a/public/css/main.css
+++ b/public/css/main.css
@@ -70,8 +70,10 @@ div.result.unsignifikant {
     background-color: #ee6456;
 }
 
-//#1d2939
-//#1caf9a
-//#ffffff
-//#ee6456
-//#d1dc48
+/*
+#1d2939
+#1caf9a
+#ffffff
+#ee6456
+#d1dc48
+*/
